--- a/car.kv
+++ b/car.kv
@@ -3,7 +3,7 @@
 
 <Car>:
     size: 25, 15
-    origin: -1420, -50
+    origin: 0, 0
     canvas:
         PushMatrix
         Rotate:
@@ -49,7 +49,7 @@
     canvas:
         Rectangle:
             pos: self.pos
-            size: 1633, 980
+            size: self.width, self.height
             source: "./images/new_city.jpg"
 
     Car:
